--- a/po/fr.po
+++ b/po/fr.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TapTempo 1.0\n"
 "Report-Msgid-Bugs-To: francois@mzf.fr\n"
-"POT-Creation-Date: 2017-10-17 22:42+0200\n"
-"PO-Revision-Date: 2017-10-17 22:42+0200\n"
+"POT-Creation-Date: 2018-01-28 20:24+0100\n"
+"PO-Revision-Date: 2018-01-28 20:34+0100\n"
 "Last-Translator: François Mazen <francois@mzf.fr>\n"
 "Language-Team: French\n"
 "Language: fr\n"
@@ -16,29 +16,104 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.5\n"
 
-#: src/main.cpp:17 src/main.cpp:34
+#: src/options.cpp:124
 #, c-format
-msgid "TAP TEMPO v%s\n"
-msgstr "TAP TEMPO v%s\n"
+msgid "Tap Tempo %s\n"
+msgstr "Tap Tempo %s\n"
 
-#: src/main.cpp:18 src/main.cpp:35
+#: src/options.cpp:125
+#, c-format
+msgid "Copyright (C) 2017-2018 Francois Mazen\n"
+msgstr "Copyright (C) 2017-2018 Francois Mazen\n"
+
+#: src/options.cpp:126
+#, c-format
+msgid ""
+"License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl."
+"html>\n"
+"This is free software: you are free to change and redistribute it.\n"
+"There is NO WARRANTY, to the extent permitted by law.\n"
+msgstr ""
+"License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl."
+"html>\n"
+"This is free software: you are free to change and redistribute it.\n"
+"There is NO WARRANTY, to the extent permitted by law.\n"
+
+#: src/options.cpp:133
+#, c-format
+msgid "Usage: taptempo [options]\n"
+msgstr "Utilisation : taptempo [options]\n"
+
+#: src/options.cpp:135
+#, c-format
+msgid "Options:\n"
+msgstr "Options :\n"
+
+#: src/options.cpp:136
+#, c-format
+msgid "  -h, --help\t\tdisplay this help message\n"
+msgstr "  -h, --help\t\taffiche ce message d'aide\n"
+
+#: src/options.cpp:137
+#, c-format
+msgid ""
+"  -p, --precision\tset the decimal precision of the tempo display\n"
+"\t\t\tdefault is %i digits, max is %i digits\n"
+msgstr ""
+"  -p, --precision\tchanger le nombre de décimale du tempo à afficher\n"
+"\t\t\tla valeur par défaut est %i décimales, le max est %i décimales\n"
+
+#: src/options.cpp:138
+#, c-format
+msgid ""
+"  -r, --reset-time\tset the time in second to reset the computation\n"
+"\t\t\tdefault is %i seconds\n"
+msgstr ""
+"  -r, --reset-time\tchanger le temps en seconde de remise à zéro du "
+"calcul\n"
+"\t\t\tla valeur par défaut est %i secondes\n"
+
+#: src/options.cpp:139
+#, c-format
+msgid ""
+"  -s, --sample-size\tset the number of samples needed to compute the "
+"tempo\n"
+"\t\t\tdefault is %i samples\n"
+msgstr ""
+"  -s, --sample-size\tchanger le nombre d'échantillons nécessaires au "
+"calcul du tempo\n"
+"\t\t\tla valeur par défaut est %i échantillons\n"
+
+#: src/options.cpp:140
+#, c-format
+msgid "  -v, --version\t\tdisplay the version\n"
+msgstr "  -v, --version\t\tafficher la version\n"
+
+#: src/taptempo.cpp:69
 #, c-format
 msgid "Hit enter key for each beat (q to quit).\n"
 msgstr "Appuyer sur la touche entrée en cadence (q pour quitter).\n"
 
-#: src/taptempo.cpp:48 src/taptempo.cpp:77
+#: src/taptempo.cpp:81
 #, c-format
 msgid "Bye Bye!\n"
 msgstr "Au revoir !\n"
 
-#: src/taptempo.cpp:59 src/taptempo.cpp:100
+#: src/taptempo.cpp:107
 #, c-format
-msgid "Tempo: %.2f bpm\t"
-msgstr "Tempo : %.2f bpm\t"
+msgid "Tempo: %s bpm\t"
+msgstr "Tempo : %s bpm\t"
 
-#: src/taptempo.cpp:105
+#: src/taptempo.cpp:112
 #, c-format
 msgid "[Hit enter key one more time to start bpm computation...]"
-msgstr "[Appuyer encore sur la touche entrée pour lancer le calcul du tempo...]"
+msgstr ""
+"[Appuyer encore sur la touche entrée pour lancer le calcul du tempo...]"
+
+#~ msgid "TAP TEMPO v%s\n"
+#~ msgstr "TAP TEMPO v%s\n"
+
+#~ msgid "Tempo: %.2f bpm\t"
+#~ msgstr "Tempo : %.2f bpm\t"
